# mtgjson

./: .dockerignore  API_COMPATIBILITY_FIXES.md  API_COMPATIBILITY_FIXES_SUMMARY.md  API_COVERAGE_ANALYSIS.md  COMPILATION_FIXES_SUMMARY.md  COMPLETE_SIGNATURE_COMPARISON.md  DOCKER_OPTIMIZATION.md  Dockerfile  FINAL_CONCRETE_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_TESTING_SUMMARY.md  INDIVIDUAL_FILE_ANALYSIS.md  MTGJSON_CLASS_EXPLORATION_SUMMARY.md  Makefile  OPTIMIZATION_AND_CLEANUP_SUMMARY.md  PARALLEL_IMPLEMENTATION_COMPLETE.md  PYTHON_API_REFERENCE.md  Python_Rust_API_Coverage_Analysis.md  REMAINING_GAPS_TO_100.md  RUST_COMPILATION_ANALYSIS.md  RUST_DOCUMENTATION_IMPROVEMENTS.md  RUST_IMPLEMENTATION_STATUS.md  RUST_INTEGRATION.md  RUST_TEST_RESULTS.md  RUST_TYPE_FIXES.md  TESTING_STRATEGY.md  TEST_COMPATIBILITY_ANALYSIS.md  api_coverage.md  build_rust.py  config.toml  debug_card_sorting.py  debug_python_sort.py  debug_rust_comparison.py  debug_rust_vs_python.py  docker-bake.hcl  explore_classes.py  explore_python_mtgjson.py  interactive_explore.py  mtgjson-rust-compilation-status.md  mtgjson-rust-providers-implementation.md  (+15 more)
mtgjson-rust/: COMPREHENSIVE_FUNCTIONALITY_COMPARISON.md  Cargo.toml  FUNCTIONALITY_COMPARISON.md  PROVIDER_IMPLEMENTATION_SUMMARY.md  RUST_CONVERSION_SUMMARY.md  RUST_TRANSFORMATION_PROGRESS.md  SET_BUILDER_CONVERSION.md
mtgjson-rust/src/: base.rs  card.rs  classes.rs  compiled_classes.rs  config.rs  constants.rs  deck.rs  foreign_data.rs  identifiers.rs  lib.rs  main.rs  output_generator.rs  parallel_call.rs  price_builder.rs  prices.rs  rulings.rs  s3_handler.rs  sealed_product.rs  set.rs  set_builder.rs  set_builder_functions.rs  utils.rs  utils_functions.rs
mtgjson-rust/src/artifacts/: mod.rs  output_generator.rs
mtgjson-rust/src/builders/: mod.rs  output_generator.rs  parallel_call.rs  price_builder.rs  set_builder.rs  set_builder_functions.rs
mtgjson-rust/src/classes/: card.rs  deck.rs  foreign_data.rs  game_formats.rs  identifiers.rs  leadership_skills.rs  legalities.rs  meta.rs  mod.rs  prices.rs  purchase_urls.rs  related_cards.rs  rulings.rs  sealed_product.rs  set.rs  translations.rs
mtgjson-rust/src/compiled_classes/: all_identifiers.rs  all_printings.rs  atomic_cards.rs  card_types.rs  compiled_list.rs  deck_list.rs  enum_values.rs  keywords.rs  mod.rs  set_list.rs  structures.rs  tcgplayer_skus.rs
mtgjson-rust/src/providers/: README.md  __init__.py  abstract.py  abstract.rs  cardhoarder.py  cardhoarder.rs  cardkingdom.py  cardkingdom.rs  cardmarket.rs  edhrec.rs  gatherer.py  gatherer.rs  github_boosters.py  github_boosters.rs  github_card_sealed_products.py  github_card_sealed_products.rs  github_decks.py  github_decks.rs  github_mtgsqlite.py  github_mtgsqlite.rs  github_sealed.py  mod.rs  mtgban.py  mtgban.rs  mtgwiki.rs  multiversebridge.py  multiversebridge.rs  provider_base.rs  scryfall.rs  tcgplayer.py  tcgplayer.rs  whats_in_standard.py  whats_in_standard.rs  wizards.py  wizards.rs
mtgjson-rust/src/providers/cardmarket/: mod.rs  monolith.py  monolith.rs
mtgjson-rust/src/providers/edhrec/: card_ranks.py  card_ranks.rs  mod.rs
mtgjson-rust/src/providers/github/: boosters.rs  card_sealed.rs  card_sealed_products.rs  decks.rs  mod.rs  mtgsqlite.rs  sealed.rs
mtgjson-rust/src/providers/mtgwiki/: mod.rs  secret_lair.py
mtgjson-rust/src/providers/scryfall/: mod.rs  monolith.py  monolith.rs  orientation.rs  orientation_detector.py  orientation_detector.rs  set_language_detector.py  sf_utils.py  sf_utils.rs  utils.rs
mtgjson-rust/tests/: integration_test.rs
