[package]
name = "mtgjson-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "mtgjson_rust"
crate-type = ["cdylib"]

[dependencies]
# Core Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
indexmap = { version = "2.0", features = ["serde"] }

# Async runtime and HTTP
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
async-trait = "0.1"

# Parallelism and performance
rayon = "1.10"
dashmap = "6.1"

# Web scraping
scraper = "0.20"

# Cryptography
sha2 = "0.10"

[dev-dependencies]
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true