[package]
name = "mtgjson_rust"
version = "5.2.0"
edition = "2021"

[lib]
name = "mtgjson_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
regex = "1.0"
url = "2.0"
base64 = "0.21"
flate2 = "1.0"
xz2 = "0.1"
tar = "0.4"
zip = "0.6"
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
tempfile = "3.8"

# AWS SDK for S3 operations (optional)
aws-config = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
aws-sdk-ssm = { version = "1.0", optional = true }

[features]
default = []
aws = ["aws-config", "aws-sdk-s3", "aws-sdk-ssm"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true